updated home page updated disciplines for admin? and profile

--- a/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryMp.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryMp.jade
@@ -1,8 +1,8 @@
 valuesEnum = chlk.models.attendance.AttendanceTypeEnum
-.big-chart-containner
+.big-chart-container
     +AdminAttendanceChart(self.getAttendanceStats())
-.big-chart-containner
+.big-chart-container
     +AdminAttendanceMpChart(self.getAttendanceStats())
-.attendance-students.mp-students
+.summary-students.mp-students
     if self.getAbsentAndLateStudents() && self.getAbsentAndLateStudents().length
         +StudentsTpl(self.getAbsentAndLateStudents(), Msg.Students_with_attendance_issues, 3).attendance-mp
