--- a/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryDay.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/AdminSummaryDay.jade
@@ -1,26 +1,26 @@
 mixin AttendanceDayBlock(num)
     if num == 1
-        .attendance-students.whole-day
+        .summary-students.whole-day
             +StudentsTpl(self.getStudentsAbsentWholeDay(), Msg.Absent_from_school, 2, date).absent-from-school
     if num == 2
-        div(type=valuesEnum.EXCUSED.valueOf()).attendance-students.bytype.excused-students
+        div(type=valuesEnum.EXCUSED.valueOf()).summary-students.bytype.excused-students
             +StudentsTpl(self.getExcusedStudents(), Msg.Excused, 2, date)(
                 class = 'attendance-' + valuesEnum.EXCUSED.valueOf()
             )
     if num == 3
-        div(type=valuesEnum.ABSENT.valueOf()).attendance-students.bytype.absent-students
+        div(type=valuesEnum.ABSENT.valueOf()).summary-students.bytype.absent-students
             +StudentsTpl(self.getAbsentStudents(), Msg.Absent_from_a_class, 2, date)(
                 class = 'attendance-' + valuesEnum.ABSENT.valueOf()
             )
     if num == 4
-        div(index="3", type=valuesEnum.LATE.valueOf()).attendance-students.bytype.late-students
+        div(index="3", type=valuesEnum.LATE.valueOf()).summary-students.bytype.late-students
             +StudentsTpl(self.getLateStudents(), Msg.Late, 2, date)(
                 class = 'attendance-' + valuesEnum.LATE.valueOf()
             )
 
 valuesEnum = chlk.models.attendance.AttendanceTypeEnum
 date = self.getDate()
-.big-chart-containner
+.big-chart-container
     +AdminAttendanceChart(self.getAttendancesStats())
 +AddStudentTpl(2, date)
 sortedArray = self.getSortedBlocksInfo()
