--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -677,39 +677,66 @@ BODY {
         overflow: hidden !important;
         margin: 1px 2px 0px 2px;
         background: white;
+        border: 1px solid #c0c0c0;
+        border-bottom: none;
+        @include border-radius(5px 5px 0 0);
+        @include box-shadow(0px 1px 3px -1px gray inset);
+        padding: 2px;
 
         .list-item{
-          font: normal 10px 'Myriad Pro' !important;
+          font: normal 12px/22px Arial;
           display: inline-block;
-          background: lightgray;
-          border-radius: 10px;
+          background: #2f7790;
+          color: white;
+          text-shadow: none;
+          @include border-radius(2px);
           padding-left: 5px;
           padding-right: 5px;
           text-overflow: ellipsis;
-          margin: 2px;
+          margin: 4px;
           float: left;
-
-          .title{
-            float: left;
-            margin-top: 4px;
-          }
+          position: relative;
 
           .del{
-            float: right;
+            display: none;
             font-weight: bold;
             cursor: pointer;
+            text-align: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+          }
+
+          .title{
+            position: relative;
+          }
+
+          &:hover{
+            .title{
+              opacity: 0;
+              z-index: 0;
+            }
+
+            .del{
+              display: block;
+              z-index: 1;
+            }
           }
         }
       }
     }
 
     .notes{
-      border: 0;
-      border-radius: 0;
+      font: normal 12px Arial;
+      border: 1px solid #c0c0c0;
+      border-top: none;
       margin: 0px 2px 3px 2px;
       height: 16px;
       line-height: 16px;
       width: 92%;
+      @include border-radius(0 0 5px 5px);
     }
 
     .attendance-reason-select + .chzn-container{
