added FundsController in UI starting implement TeacherFundPage

--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -36,6 +36,8 @@
 @import "partials/main/apps/_market_pages";
 @import "partials/main/apps/_my_apps";
 
+@import "partials/main/funds/_base_funds";
+
 @import "partials/main/popups/attachments/_attachment_dialogs";
 @import "partials/main/popups/_day_discipline";
 @import "partials/main/sysadmin/_apps";
