--- a/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/AppMarketBase.jade
@@ -1,9 +1,11 @@
 mixin AppMarketToolbar(balance, categories, gradelevels)
     .action-bar.not-transparent
         .container.panel-bg.buttons-toolbar
-            .user-balance= "$" + balance
+            if balance
+                .user-balance= "$" + balance
             +ActionLink('appmarket', 'list').app-store.toolbar-btn App Store
             +ActionLink('appmarket', 'myApps').my-apps.toolbar-btn My Apps
+            +ActionLink('funds', 'view').toolbar-btn App Funds
             +ActionForm('', '')
                 +SearchBox(chlk.services.AppMarketService, "getAppsByFilter",
                 chlk.templates.apps.AppMarketSearchBoxTpl)#app-market-searchbox(name="appMarketSearch", triggerBtnId="app-market-search-btn")
