fixed apps controller

--- a/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/AnnouncementAppAttachments.jade
@@ -11,10 +11,12 @@ mixin AnnouncementFormApplicationItem(app, i)
     viewUrl = self.isGradable() && !self.needDeleteButton ? app.getGradingViewUrl() : app.getViewUrl()
     appMode = self.isGradable() && !self.needDeleteButton ? chlk.models.apps.AppModes.GRADINGVIEW : chlk.models.apps.AppModes.VIEW
     appUrl = app.getUrl()
+    isBanned = app.getBanInfo() && app.getBanInfo().isBanned()
+
     div.announcement-item.application
         if self.needDeleteButton
             +ActionLink('announcement', 'deleteApp', app.getId()).close-btn
-        +ActionLink('apps', 'viewApp', appUrl, viewUrl, appMode, app.getId())
+        +ActionLink('apps', 'viewApp', appUrl, viewUrl, appMode, app.getId(), null, isBanned)
             +LoadingImage(src=app.getPictureHref(), id="loading-image-" + i)
             .title
                 div=app.getName()
